[gd_scene load_steps=4 format=3 uid="uid://bwiaj0mdbm2xt"]

[ext_resource type="Texture2D" uid="uid://dcmewu6a0a7d3" path="res://Rescources/2d/mold.png" id="1_711nu"]
[ext_resource type="Script" path="res://Code/Scripts/mold.gd" id="2_f2utm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fxvcn"]
radius = 35.0143

[node name="Mold" type="Sprite2D"]
texture = ExtResource("1_711nu")
script = ExtResource("2_f2utm")
moldAppliedOnEnter = 5.0
moldAppliedOnTimout = 7.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fxvcn")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
